updated student filter
