# src/modules/student/dto/create-student.dto.ts
@@ -16,7 +16,7 @@ import {
 export class CreateStudentDto {
   @IsNotEmpty()
   @IsString()
-  class: string;
+  classId: string;
 
   @IsString()
   classSection: string = '';
